Fix z-index issue

--- a/assets/scss/developer.scss
+++ b/assets/scss/developer.scss
@@ -1334,6 +1334,7 @@ section.bg-clr-primary {
 
         @media (max-width: 575px) {
             border-radius: 16px;
+            color: rgb(38, 54, 146);
         }
     }
 
